--- a/package.json
+++ b/package.json
@@ -8,5 +8,16 @@
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1"
-  }
+  },
+  "name": "server-side",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "Mariyah Bhat <mariyahbhat123@gmail.com>",
+  "license": "MIT",
+  "description": ""
 }
